Fix list element marks cut off in blog post body (#736)
* Off topic: Fix comparison table header with extra spacing on the top

* Fix blog post tables not scrolling as expected and li marks cut off

* Off topic: Fix blog post sidebar width wrong width on the comparison page

* Fix mobile and desktop menus conflict - both were opening on first page load on mobile

* Add missing id to buttons from the menu on mobile

* Fix sidebar width

* Remove sidebar CTA link on mobile

* Remove left padding of the blog post body on mobile

* Fix company updates sidebar width

* Make anchor wrap processed blog post images

* We don't need to use getImage function

* Add missing key attribute to fragment

* Fix li can't be inside another li

* Fix blog post cards not having unique key value

* Fix menus product, resources and solutions not opening as expected on mobile

* Remove the dark background when menu opens on mobile

* Turn the TOC component controlled

* Just a tweak in the plugin code

* Include the id in the blog post query and use it instead of slug in the key

* Just a little tweak

* Fix blog post card key

---------

--- a/src/components/ArticleSidebar/styles.module.less
+++ b/src/components/ArticleSidebar/styles.module.less
@@ -1,13 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 256px;
-  width: 100%;
+  width: 256px;
   gap: 24px;
   height: fit-content;
 
-  @media (max-width: 1150px) {
-    max-width: 100%;
+  @media (max-width: 1024px) {
+    width: 100%;
   }
 
   @media (min-width: 1151px) {
@@ -25,15 +24,17 @@
 .shareArticleDesktop {
   display: flex;
 
-  @media (max-width: 1150px) {
+  @media (max-width: 1024px) {
     display: none;
   }
 }
 
 .tableOfContentsWrapper {
   overflow: auto;
+}
 
-  @media (max-width: 1150px) {
-    margin-bottom: 32px;
+.ctaLink {
+  @media (max-width: 1024px) {
+    display: none;
   }
 }
