--- a/src/components/BlogPost/styles.module.less
+++ b/src/components/BlogPost/styles.module.less
@@ -205,6 +205,7 @@
 
   @media (max-width: 1024px) {
     width: 100%;
+    padding-left: 0;
   }
 
   @media (max-width: 768px) {
