--- a/src/components/ShareArticle/styles.module.less
+++ b/src/components/ShareArticle/styles.module.less
@@ -9,18 +9,10 @@
       line-height: 30px;
       color: var(--dark-blue);
   }
-
-  @media (max-width: 1150px) {
-      margin-bottom: 0;
-  }
 }
 
 .socialButtonsWrapper {
   display: flex;
   gap: 14px;
   flex-wrap: wrap;
-
-  @media (max-width: 1150px) {
-      gap: 20px;
-  }
 }
